Better coverage with `ClassValue` cache usage, document #bindNull to make clear that it's needed for custom types since we can't do this portably with JDBC